[gd_scene load_steps=4 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" path="res://algorithms/MachineLearning/natural_language_processing_NLP/NaturalLanguageProcessingNLP.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1) * 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1) * 0.3

[node name="NaturalLanguageProcessingNLP" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="InputText" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="TextParticles" type="Node3D" parent="InputText"]

[node name="TextLabel" type="CSGBox3D" parent="InputText"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material = SubResource("StandardMaterial3D_1")

[node name="ProcessingPipeline" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="PipelineCore" type="CSGBox3D" parent="ProcessingPipeline"]
size = Vector3(3, 3, 3)
material = SubResource("StandardMaterial3D_2")

[node name="PipelineLabel" type="CSGBox3D" parent="ProcessingPipeline"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material = SubResource("StandardMaterial3D_1")

[node name="ProcessingStages" type="Node3D" parent="ProcessingPipeline"]

[node name="TokenizationCore" type="CSGSphere3D" parent="ProcessingPipeline/ProcessingStages"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)
material = SubResource("StandardMaterial3D_3")

[node name="EmbeddingCore" type="CSGSphere3D" parent="ProcessingPipeline/ProcessingStages"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material = SubResource("StandardMaterial3D_3")

[node name="AttentionCore" type="CSGSphere3D" parent="ProcessingPipeline/ProcessingStages"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)
material = SubResource("StandardMaterial3D_3")

[node name="SentimentCore" type="CSGSphere3D" parent="ProcessingPipeline/ProcessingStages"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0)
material = SubResource("StandardMaterial3D_3")

[node name="NERCore" type="CSGSphere3D" parent="ProcessingPipeline/ProcessingStages"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0)
material = SubResource("StandardMaterial3D_3")

[node name="OutputResults" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="ResultParticles" type="Node3D" parent="OutputResults"]

[node name="ResultLabel" type="CSGBox3D" parent="OutputResults"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material = SubResource("StandardMaterial3D_1")

[node name="LanguageModel" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="ModelCore" type="CSGBox3D" parent="LanguageModel"]
size = Vector3(6, 0.5, 3)
material = SubResource("StandardMaterial3D_2")

[node name="ModelLabel" type="CSGBox3D" parent="LanguageModel"]
size = Vector3(4, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material = SubResource("StandardMaterial3D_1")

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="NLPMetrics" type="Node3D" parent="."]

[node name="AccuracyMeter" type="Node3D" parent="NLPMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="AccuracyBase" type="CSGBox3D" parent="NLPMetrics/AccuracyMeter"]
size = Vector3(4, 0.2, 1)
material = SubResource("StandardMaterial3D_1")

[node name="AccuracyIndicator" type="CSGSphere3D" parent="NLPMetrics/AccuracyMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material = SubResource("StandardMaterial3D_2")

[node name="PerplexityMeter" type="Node3D" parent="NLPMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="PerplexityBase" type="CSGBox3D" parent="NLPMetrics/PerplexityMeter"]
size = Vector3(4, 0.2, 1)
material = SubResource("StandardMaterial3D_1")

[node name="PerplexityIndicator" type="CSGSphere3D" parent="NLPMetrics/PerplexityMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
